testsuite/tests/typing-layouts-unboxed-records/parsing_inline_unboxed_record.compilers.reference
File "parsing_inline_unboxed_record.ml", line 11, characters 22-24:
11 | type variant = Foo of #{ x : string }
                           ^^
Error: Syntax error
